--- a/panostream.html
+++ b/panostream.html
@@ -15,6 +15,10 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
    <!-- Load the polyfill to switch-hit between Chrome and Firefox -->
   <script src="adapter.js"></script>
+
+  <script src="sylvester.js" type="text/javascript"></script>
+  <script src="glUtils.js" type="text/javascript"></script>
+  <script src="webgl.js" type="text/javascript"></script>
   <script type="text/javascript">
   $ = function(id) {
     return document.getElementById(id);
@@ -88,8 +92,25 @@
 
   window.onload = function() {
     getDevices();
+    startWebGL();
   };
   </script>
+  <script id="shader-fs" type="x-shader/x-fragment">
+    void main(void) {
+      gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+    }
+  </script>
+  <script id="shader-vs" type="x-shader/x-vertex">
+    attribute vec3 aVertexPosition;
+
+    uniform mat4 uMVMatrix;
+    uniform mat4 uPMatrix;
+
+    void main(void) {
+      gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+    }
+  </script>
+
 </head>
 <body>
 
@@ -116,6 +137,12 @@
       <div id="view3-label"></div>
     </div>
   </div>
+
+   <canvas id="glcanvas" width="640" height="240">
+    Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+  </canvas>
+
+
 </div>
 </body>
 </html>
