--- a/panostream.html
+++ b/panostream.html
@@ -27,20 +27,31 @@
     startWebGL();
   };
   </script>
-  <script id="shader-fs" type="x-shader/x-fragment">
-    void main(void) {
-      gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-    }
-  </script>
+
   <script id="shader-vs" type="x-shader/x-vertex">
-    attribute vec3 aVertexPosition;
+      attribute highp vec3 aVertexPosition;
+      attribute highp vec2 aTextureCoord;
 
-    uniform mat4 uMVMatrix;
-    uniform mat4 uPMatrix;
+      uniform highp mat4 uMVMatrix;
+      uniform highp mat4 uPMatrix;
 
-    void main(void) {
-      gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-    }
+      varying highp vec2 vTextureCoord;
+
+      void main(void) {
+        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+        vTextureCoord = aTextureCoord;
+      }
+  </script>
+
+  <script id="shader-fs" type="x-shader/x-fragment">
+      precision mediump float;
+      varying highp vec2 vTextureCoord;
+
+      uniform sampler2D uSampler;
+
+      void main(void) {
+        gl_FragColor = texture2D(uSampler, vTextureCoord);
+      }
   </script>
 
 </head>
