--- a/panostream.html
+++ b/panostream.html
@@ -103,13 +103,10 @@
     Your browser doesn't appear to support the HTML5
     <code>&lt;canvas&gt;</code> element.
   </canvas>
-
-  <canvas id="displaycanvas" width="640" height="240">
-    Your browser doesn't appear to support the HTML5
-    <code>&lt;canvas&gt;</code> element.
-  </canvas>
+  
   <canvas id="tmpcanvas1" width="320" height="240" style="display:none"></canvas>
   <canvas id="tmpcanvas2" width="320" height="240" style="display:none"></canvas>
+  <p id="overlap"></p>
 </div>
 </body>
 </html>
