--- a/panostream.html
+++ b/panostream.html
@@ -25,7 +25,7 @@
   window.onload = function() {
     getDevices();
     startWebGL();
-    setInterval("getPixels()",2000);
+    setInterval("updateOverlap()",1000);
   };
   </script>
 
