Slider for manual overlap

--- a/panostream.html
+++ b/panostream.html
@@ -104,7 +104,9 @@
     <code>&lt;canvas&gt;</code> element.
   </canvas>
 
-  <canvas id="displaycanvas" width="640" height="240">
+  <input type="range" id="overlap" min="0" max="100" value="50">
+
+  <canvas id="displaycanvas" width="640" height="240" visible="none">
     Your browser doesn't appear to support the HTML5
     <code>&lt;canvas&gt;</code> element.
   </canvas>
