--- a/panostream.html
+++ b/panostream.html
@@ -16,8 +16,8 @@
   <!-- Load the polyfill to switch-hit between Chrome and Firefox -->
   <script src="adapter.js"></script>
 
-  <script src="sylvester.js" type="text/javascript"></script>
-  <script src="glUtils.js" type="text/javascript"></script>
+
+  <script src="Three.js"></script>
   <script src="webgl.js" type="text/javascript"></script>
 
   <script src="panostream.js"></script>
@@ -26,32 +26,6 @@
     getDevices();
     startWebGL();
   };
-  </script>
-
-  <script id="shader-vs" type="x-shader/x-vertex">
-      attribute highp vec3 aVertexPosition;
-      attribute highp vec2 aTextureCoord;
-
-      uniform highp mat4 uMVMatrix;
-      uniform highp mat4 uPMatrix;
-
-      varying highp vec2 vTextureCoord;
-
-      void main(void) {
-        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-        vTextureCoord = aTextureCoord;
-      }
-  </script>
-
-  <script id="shader-fs" type="x-shader/x-fragment">
-      precision mediump float;
-      varying highp vec2 vTextureCoord;
-
-      uniform sampler2D uSampler;
-
-      void main(void) {
-        gl_FragColor = texture2D(uSampler, vTextureCoord);
-      }
   </script>
 
 </head>
@@ -98,13 +72,10 @@
     </div>
   </div>
 
-  <canvas id="glcanvas" width="960" height="240">
-    Your browser doesn't appear to support the HTML5
-    <code>&lt;canvas&gt;</code> element.
-  </canvas>
-
+  <canvas id="canvas1" width="320" height="240" style="display:none"></canvas>
+  <div id="glcanvas"></div>
+  
   <input type="range" id="overlapSlider" min="0" max="100" value="50">
-
   <canvas id="tmpcanvas1" width="320" height="240" style="display:none"></canvas>
   <canvas id="tmpcanvas2" width="320" height="240" style="display:none"></canvas>
   <p id="overlap" onclick="updateOverlap()">update overlap</p>
