--- a/panostream.html
+++ b/panostream.html
@@ -17,7 +17,7 @@
   <script src="adapter.js"></script>
 
 
-  <script src="Three.js"></script>
+  <script src="libs/Three.js"></script>
   <script src="webgl.js" type="text/javascript"></script>
 
   <script src="panostream.js"></script>
@@ -73,8 +73,10 @@
   </div>
 
   <canvas id="canvas1" width="320" height="240" style="display:none"></canvas>
-  <div id="glcanvas"></div>
-  
+  <canvas id="canvas2" width="320" height="240" style="display:none"></canvas>
+  <canvas id="canvas3" width="320" height="240" style="display:none"></canvas>
+  <div id="glcanvas" width="960" height="240" ></div>
+
   <input type="range" id="overlapSlider" min="0" max="100" value="50">
   <canvas id="tmpcanvas1" width="320" height="240" style="display:none"></canvas>
   <canvas id="tmpcanvas2" width="320" height="240" style="display:none"></canvas>
