--- a/panostream.html
+++ b/panostream.html
@@ -17,11 +17,17 @@
   <!-- Load the polyfill to switch-hit between Chrome and Firefox. -->
   <script src="adapter.js"></script>
 
-  <!-- Load the Three.js library and the code that creates drawing scene,
-  caneras and maps video feeds to 3D textures. Internally it uses the profiler
-  nanolibrary from http://inspirit.github.io/jsfeat for FPS collection etc. -->
+  <!--
+    Load the code that creates the scene, caneras and maps video feeds to 3D
+    textures. Internally it uses:
+    * The profiler nanolibrary from http://inspirit.github.io/jsfeat for FPS
+    collection etc.
+    * The JSFeat library to extract features from the frames.
+    * Obviously the three.JS library.
+  -->
   <script src="libs/profiler.js" type="text/javascript" ></script>
-  <script src="libs/Three.js" type="text/javascript" ></script>
+  <script src="libs/jsfeat.js" type="text/javascript" ></script>
+  <script src="libs/three.js" type="text/javascript" ></script>
   <script src="webgl.js" type="text/javascript"></script>
 
   <script src="panostream.js"></script>
@@ -82,7 +88,6 @@
   <div id="glcanvas" width="960" height="240" ></div>
 
   <div id="log">hi</div>
-
 
   <canvas id="tmpcanvas1" width="320" height="240" style="display:none"></canvas>
   <canvas id="tmpcanvas2" width="320" height="240" style="display:none"></canvas>
