cut some corners around JS integration. Only two canvasses atm.

--- a/panostream.html
+++ b/panostream.html
@@ -77,30 +77,30 @@
     <div id="left">
       <video width="320" height="240" id="vid1" autoplay="autoplay"
           class="video-area"></video>
-      <div id="view1-label"></div>
+      <div id="vid1-label"></div>
       <div>
-        Size: <div id="view1-size" class="inline-contents"></div>
-        <div id="view1-stream-size" class="inline-contents">(stream size
+        Size: <div id="vid1-size" class="inline-contents"></div>
+        <div id="vid1-stream-size" class="inline-contents">(stream size
             :N/A)</div><br/>
       </div>
     </div>
     <div id="left">
       <video width="320" height="240" id="vid2" autoplay="autoplay"
           class="video-area"></video>
-      <div id="view2-label"></div>
+      <div id="vid2-label"></div>
       <div>
-        Size: <div id="view2-size" class="inline-contents"></div>
-        <div id="view2-stream-size" class="inline-contents">(stream size
+        Size: <div id="vid2-size" class="inline-contents"></div>
+        <div id="vid2-stream-size" class="inline-contents">(stream size
             :N/A)</div><br/>
       </div>
     </div>
     <div id="left">
       <video width="320" height="240" id="vid33" autoplay="autoplay"
-          class="video-area"></video>
-      <div id="view3-label"></div>
+          class="video-area" style="display:none"></video>
+      <div id="vid3-label"></div>
       <div>
-        Size: <div id="view3-size" class="inline-contents"></div>
-        <div id="view3-stream-size" class="inline-contents">(stream size
+        Size: <div id="vid3-size" class="inline-contents"></div>
+        <div id="vid3-stream-size" class="inline-contents">(stream size
             :N/A)</div><br/>
       </div>
     </div>
@@ -112,9 +112,6 @@
   <div id="glcanvas" width="960" height="240" ></div>
 
   <br>
-  <button id="btn_click" onclick="start()" disabled="true">
-    Start video tags
-  </button>
   <button id="btn_calibrate" onclick="calibrate()" disabled="true">
     Calibrate, you evil monster!
   </button>
