--- a/panostream.html
+++ b/panostream.html
@@ -69,11 +69,13 @@
     <button id="request-video" onclick="requestVideo();">Request video</button>
     <button id="reset-video" onclick="resetAllVideo();">Reset all devices
         </button>
+    <button id="btn_calibrate" onclick="calibrate()" disabled="true">
+    (Please) calibrate.</button>
   </div>
   <div>Panorama:</div>
   <div id="container">
     <div id="left">
-      <video width="320" height="240" id="vid1" autoplay="autoplay"
+      <video width="640" height="480" id="vid1" autoplay="autoplay"
           class="video-area"></video>
       <div id="vid1-label"></div>
       <div>
@@ -83,7 +85,7 @@
       </div>
     </div>
     <div id="left">
-      <video width="320" height="240" id="vid2" autoplay="autoplay"
+      <video width="640" height="480" id="vid2" autoplay="autoplay"
           class="video-area"></video>
       <div id="vid2-label"></div>
       <div>
@@ -92,30 +94,14 @@
             :N/A)</div><br/>
       </div>
     </div>
-    <div id="left">
-      <video width="320" height="240" id="vid33" autoplay="autoplay"
-          class="video-area" style="display:none"></video>
-      <div id="vid3-label"></div>
-      <div>
-        Size: <div id="vid3-size" class="inline-contents"></div>
-        <div id="vid3-stream-size" class="inline-contents">(stream size
-            :N/A)</div><br/>
-      </div>
-    </div>
+
   </div>
 
-  <canvas id="canvas1" width="320" height="240" style="display:none"></canvas>
-  <canvas id="canvas2" width="320" height="240" style="display:none"></canvas>
-  <canvas id="canvas3" width="320" height="240" style="display:none"></canvas>
-  <div id="glcanvas" width="960" height="240" ></div>
+  <canvas id="canvas1" width="640" height="480" style="display:none"></canvas>
+  <canvas id="canvas2" width="640" height="480" style="display:none"></canvas>
+  <div id="glcanvas" width="960" height="480" ></div>
 
   <br>
-  <button id="btn_calibrate" onclick="calibrate()" disabled="true">
-    Calibrate, you evil monster!
-  </button>
-
-  <canvas id="tmpcanvas1" width="320" height="240" style="display:none"></canvas>
-  <canvas id="tmpcanvas2" width="320" height="240" style="display:none"></canvas>
 
 </div>
 </body>
