--- a/panostream.html
+++ b/panostream.html
@@ -26,6 +26,7 @@
   -->
   <script src="libs/profiler.js" type="text/javascript" ></script>
   <script src="libs/three.js" type="text/javascript" ></script>
+  <script src="libs/TrackballControls.js" type="text/javascript" ></script>
   <script src="webgl.js" type="text/javascript"></script>
 
   <!-- This is the NaCl/PNaCl part -->
