Played with JS-to-NaCl images not being passed ok, seems to be a signed/unsigned interpretation somewhere. Sorted out somehow. Disconnected controls and reverted to 320x240

--- a/panostream.html
+++ b/panostream.html
@@ -76,7 +76,7 @@
   <div>Panorama:</div>
   <div id="container">
     <div id="left">
-      <video width="640" height="480" id="vid1" autoplay="autoplay"
+      <video width="320" height="240" id="vid1" autoplay="autoplay"
           class="video-area"></video>
       <div id="vid1-label"></div>
       <div>
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div id="left">
-      <video width="640" height="480" id="vid2" autoplay="autoplay"
+      <video width="320" height="240" id="vid2" autoplay="autoplay"
           class="video-area"></video>
       <div id="vid2-label"></div>
       <div>
@@ -98,9 +98,11 @@
 
   </div>
 
-  <canvas id="canvas1" width="640" height="480" style="display:none"></canvas>
-  <canvas id="canvas2" width="640" height="480" style="display:none"></canvas>
-  <div id="glcanvas" width="960" height="480" ></div>
+  <canvas id="canvas1" width="320" height="240" style="display:none"></canvas>
+  <canvas id="canvas2" width="320" height="240" style="display:none"></canvas>
+  <!--<canvas id="canvas3" width="320" height="240"></canvas>-->
+
+  <div id="glcanvas" width="960" height="240"></div>
 
   <br>
 
